# feathr

./: .gitignore  README.md  bun.lockb  feathr_1.0.2_x64_en-US.msi  index.html  jsconfig.json  latest.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  uno.config.js  vite.config.js
.github/: FUNDING.yml
.github/releases/: latest.json
.github/workflows/: main.yml
_trash/: Parchment.jsx
desktop/: index.html  jsconfig.json  package.json  vite.config.js
desktop/public/: global.js
desktop/public/fonts/: fonts.css
desktop/src/: App.svelte  main.js
desktop/src/comp/: App.svelte
desktop/src/styles/: app.pcss  base.pcss  components.pcss  editor.pcss  highlight.pcss  sidebar.pcss  suggestions.pcss  tooltip.pcss
mobile/: index.html  jsconfig.json  package.json  vite.config.js
mobile/src/: App.svelte  main.js
mobile/src/js/: drag-menu.js  stores.js  utils.js
mobile/src/styles/: app.pcss  base.css  base.pcss  drawer.css  drawer.pcss  header.css  header.pcss  (+2 more)
shared/: jsconfig.json  package.json
shared/i18n/: de.json  en.json
shared/styles/: anim.pcss  base.pcss  caret.pcss  cmdbar.pcss  components.pcss  editor.pcss  highlight.pcss  stats.pcss  suggestions.pcss  themes.pcss
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.desktop.conf.json  tauri.mobile.conf.json  tauri.msstore.conf.json
src-tauri/capabilities/: main.json  migrated.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  lib.rs  main.rs  tray.rs
src/comp/: App.svelte  Editor.svelte  StatsBar.svelte
src/styles/: app.pcss  base.pcss  caret.pcss  cmdbar.pcss  editor.pcss  header.pcss  highlight.pcss  menu.pcss  operator.pcss  sidebar.pcss  stats.pcss  themes.pcss
src/utils/: editor.js  menu.js  settings.js  transitions.js
(+171 files in other folders)
