[package]
name = "leaf"
version = "1.0.0"
description = "A modern and minimal text editor for desktop and mobile"
authors = ["Deek (https://github.com/justDeek)"]
repository = "github.com/justDeek/leaf-editor"
license = "GPL-3.0"
default-run = "leaf"
edition = "2021"

[lib]
name = "leaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [ "macos-private-api"] }
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.1"
tauri-plugin-window-state = "2.0.0-rc"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = { version = "2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0-beta"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# DO NOT remove this! - this feature is used used for production builds where `devPath` points to the filesystem
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true      # Remove debug symbols
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
